--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
+    "polished": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.3",
+    "react-inlinesvg": "^1.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.0.1"
   },
